// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output = "./dbml"
}

datasource db {
  provider = "postgresql"
}

// ==================== USUARIOS ====================

model User {
  id        String    @id @default(uuid())
  email     String    @unique
  password  String
  name      String
  surname   String
  phone     String    @unique
  role      UserRole  @default(CUSTOMER)
  active    Boolean   @default(true)
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  addresses Address[]
  cartItems CartItem[]
  orders    Order[]
  refreshtokens  RefreshToken[]

  @@index([email])
  @@index([phone])
}

enum UserRole {
  CUSTOMER
  ADMIN
  STAFF
}

model RefreshToken {
  id          String @id @default(uuid())
  token       String @unique
  user        User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId      String
  createdAt   DateTime  @default(now())
  expiresAt   DateTime
  deviceInfo  String

  @@index([token])
  @@index([userId])
}

model Address {
  id           String   @id @default(uuid())
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId       String
  label        String?
  street       String
  city         String
  postalCode   String
  province     String?
  instructions String?
  isDefault    Boolean  @default(false)
  createdAt    DateTime @default(now())

  orders Order[]

  @@index([userId])
}

// ==================== PRODUCTOS ====================

model Product {
  id          String           @id @default(uuid())
  name        String
  description String?
  category    Category
  subcategory String?
  basePrice   Decimal          @db.Decimal(10,2)  
  imageUrl    String?
  active      Boolean          @default(true)

  allowCustomization Boolean   @default(false)
  
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt

  variants              ProductVariant[]
  baseCustomizables     ProductBaseCustomizable[]  // Ingredientes/componentes base
  availableCustomizables ProductAvailableCustomizable[] // Qué se puede añadir/quitar
  cartItems             CartItem[]
  orderItems            OrderItem[]

  @@index([category])
  @@index([active])
}

enum Category {
  PIZZA
  BURGER
  BEBIDA
  ENTRANTE
  POSTRE
  ENSALADA
}

model ProductVariant {
  id         String   @id @default(uuid())
  name       String   // "Mediana", "Familiar", "1L", "33cl"
  priceDelta Decimal  @db.Decimal(10,2)
  active     Boolean  @default(true)
  product    Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  productId  String

  cartItems  CartItem[]
  orderItems OrderItem[]

  @@index([productId])
}

// ==================== SISTEMA DE PERSONALIZACIÓN GENÉRICO ====================

model Customizable {
  id         Int                   @id @default(autoincrement())
  name       String                @unique
  extraPrice Decimal               @db.Decimal(10,2)
  available  Boolean               @default(true)
  category   CustomizableCategory?
  imageUrl   String?
  createdAt  DateTime              @default(now())

  // Relaciones
  productBase       ProductBaseCustomizable[]
  productAvailable  ProductAvailableCustomizable[]
  cartCustom        CartItemCustomization[]
  orderCustom       OrderItemCustomization[]

  @@index([available])
  @@index([category])
}

enum CustomizableCategory {
  QUESO
  CARNE
  VEGETAL
  SALSA
  EXTRA
}

// Elementos que vienen POR DEFECTO en un producto
model ProductBaseCustomizable {
  productId      String
  product        Product      @relation(fields: [productId], references: [id], onDelete: Cascade)
  customizableId Int
  customizable   Customizable @relation(fields: [customizableId], references: [id])
  isRemovable    Boolean      @default(true) // ¿Se puede quitar?

  @@id([productId, customizableId])
  @@index([productId])
}

// Elementos que SE PUEDEN AÑADIR a un producto (extras)
model ProductAvailableCustomizable {
  productId      String
  product        Product      @relation(fields: [productId], references: [id], onDelete: Cascade)
  customizableId Int
  customizable   Customizable @relation(fields: [customizableId], references: [id])

  @@id([productId, customizableId])
  @@index([productId])
}

// ==================== CARRITO ====================

model CartItem {
  id         String     @id @default(uuid())
  user       User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId     String
  product    Product    @relation(fields: [productId], references: [id], onDelete: Cascade)
  productId  String
  variant    ProductVariant? @relation(fields: [variantId], references: [id], onDelete: SetNull)
  variantId  String?
  quantity   Int        @default(1)
  notes      String?
  createdAt  DateTime   @default(now())
  updatedAt  DateTime   @updatedAt

  customizations CartItemCustomization[]

  @@index([userId])
  @@index([productId])
}

// Personalizaciones en el carrito
model CartItemCustomization {
  cartItemId     String
  cartItem       CartItem     @relation(fields: [cartItemId], references: [id], onDelete: Cascade)
  customizableId Int
  customizable   Customizable @relation(fields: [customizableId], references: [id])
  action         CustomizationAction

  @@id([cartItemId, customizableId, action])
  @@index([cartItemId])
}

enum CustomizationAction {
  ADD
  REMOVE
}

// ==================== PEDIDOS ====================

model Order {
  id       String  @id @default(uuid())
  user     User?   @relation(fields: [userId], references: [id], onDelete: SetNull)
  userId   String?
  isGuest  Boolean @default(false)

  // Datos de contacto (obligatorios siempre que sea guest)
  customerName  String
  customerPhone String

  // Tipo de entrega
  deliveryType DeliveryType @default(DELIVERY)

  // Dirección (solo si deliveryType = DELIVERY)
  address   Address? @relation(fields: [addressId], references: [id], onDelete: SetNull)
  addressId String?

  // Snapshot de dirección de entrega (para historial)
  deliveryStreet       String?
  deliveryCity         String?
  deliveryPostalCode   String?
  deliveryInstructions String?

  // Hora programada (opcional)
  scheduledFor  DateTime? // Hora solicitada por el cliente
  estimatedTime DateTime? // Hora estimada por la pizzería

  // Precios
  subtotal    Decimal   @db.Decimal(10,2)
  deliveryFee Decimal   @db.Decimal(10,2)
  total       Decimal   @db.Decimal(10,2)

  // Estado
  status    OrderStatus @default(PENDING)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  items   OrderItem[]
  payment Payment?

  @@index([userId])
  @@index([status])
  @@index([deliveryType])
  @@index([createdAt])
}

enum DeliveryType {
  DELIVERY
  PICKUP
}

model OrderItem {
  id        String  @id @default(uuid())
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  orderId   String
  product   Product @relation(fields: [productId], references: [id])
  productId String
  variant   ProductVariant? @relation(fields: [variantId], references: [id], onDelete: SetNull)
  variantId String?

  // Snapshots para historial
  nameSnapshot    String
  variantSnapshot String?
  notesSnapshot   String?
  unitPrice       Decimal   @db.Decimal(10,2)
  quantity        Int
  subtotal        Decimal   @db.Decimal(10,2)

  customizations OrderItemCustomization[]

  @@index([orderId])
}

// Snapshot de personalizaciones en el pedido
model OrderItemCustomization {
  orderItemId    String
  orderItem      OrderItem    @relation(fields: [orderItemId], references: [id], onDelete: Cascade)
  customizableId Int
  customizable   Customizable @relation(fields: [customizableId], references: [id])
  action         CustomizationAction
  nameSnapshot   String       // Guardamos el nombre por si se borra el customizable
  priceSnapshot  Decimal      @db.Decimal(10,2)

  @@id([orderItemId, customizableId, action])
  @@index([orderItemId])
}

enum OrderStatus {
  PENDING    // Recibido, esperando pago/confirmación
  PAID       // Pagado
  CONFIRMED  // Confirmado por la pizzería
  READY      // Listo para recoger/enviar
  ON_THE_WAY // En camino (solo DELIVERY)
  DELIVERED  // Entregado/Recogido
  CANCELLED  // Cancelado
}

// ==================== PAGOS ====================

model Payment {
  id                String          @id @default(uuid())
  order             Order           @relation(fields: [orderId], references: [id], onDelete: Cascade)
  orderId           String          @unique
  provider          PaymentProvider @default(STRIPE)
  sessionId         String?
  providerPaymentId String?
  providerRefundId  String?
  amount            Float
  currency          String          @default("EUR")
  status            PaymentStatus   @default(PENDING)

  createdAt         DateTime        @default(now())
  updatedAt         DateTime        @updatedAt

  @@index([providerPaymentId])
  @@index([status])
}

enum PaymentProvider {
  STRIPE
  CASH_ON_DELIVERY
  CARD_ON_DELIVERY
}

enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED
  REFUNDED
}

// ==================== CONFIGURACIÓN DEL NEGOCIO ====================

model Settings {
  id             String    @id @default("singleton")

  // Configuración pedidos
  deliveryFee    Decimal   @db.Decimal(10,2) @default(0.00)
  minOrderAmount Decimal   @db.Decimal(10,2) @default(0.00)
  avgPrepMinutes Int       @default(30)
  autoAcceptOrders Boolean @default(true)

  // Control de estado del negocio
  temporarilyClosed Boolean @default(false)
  statusMessage     String?

  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

// Sistema de horarios flexible
model BusinessHours {
  id          String      @id @default(uuid())
  dayOfWeek   DayOfWeek   // Lunes, Martes, etc.
  openTime    String      // "13:00"
  closeTime   String      // "16:00"
  isClosed    Boolean     @default(false)  // Día cerrado completamente
  order       Int         // Para ordenar múltiples franjas del mismo día
  
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt

  @@unique([dayOfWeek, order])
  @@index([dayOfWeek])
  @@index([isClosed])
}

enum DayOfWeek {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

// NUEVO: Para horarios especiales (festivos, eventos, etc.)
model SpecialHours {
  id          String    @id @default(uuid())
  date        DateTime  @db.Date  // Día específico
  reason      String?   // "Navidad", "Evento especial", etc.
  isClosed    Boolean   @default(false)  // Si está cerrado ese día
  
  // Si está abierto, horarios específicos
  openTime    String?   // "13:00"
  closeTime   String?   // "23:30"
  
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@unique([date])
  @@index([date])
}