//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  surname String [not null]
  phone String [unique, not null]
  role UserRole [not null, default: 'CUSTOMER']
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  addresses Address [not null]
  cartItems CartItem [not null]
  orders Order [not null]
  refreshtokens RefreshToken [not null]
}

Table RefreshToken {
  id String [pk]
  token String [unique, not null]
  user User [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
  deviceInfo String [not null]
}

Table Address {
  id String [pk]
  user User [not null]
  userId String [not null]
  label String
  street String [not null]
  city String [not null]
  postalCode String [not null]
  province String
  instructions String
  isDefault Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  orders Order [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  description String
  category Category [not null]
  subcategory String
  basePrice Decimal [not null]
  imageUrl String
  active Boolean [not null, default: true]
  allowCustomization Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  variants ProductVariant [not null]
  baseCustomizables ProductBaseCustomizable [not null]
  availableCustomizables ProductAvailableCustomizable [not null]
  cartItems CartItem [not null]
  orderItems OrderItem [not null]
}

Table ProductVariant {
  id String [pk]
  name String [not null]
  priceDelta Decimal [not null]
  active Boolean [not null, default: true]
  product Product [not null]
  productId String [not null]
  cartItems CartItem [not null]
  orderItems OrderItem [not null]
}

Table Customizable {
  id Int [pk, increment]
  name String [unique, not null]
  extraPrice Decimal [not null]
  available Boolean [not null, default: true]
  category CustomizableCategory
  imageUrl String
  createdAt DateTime [default: `now()`, not null]
  productBase ProductBaseCustomizable [not null]
  productAvailable ProductAvailableCustomizable [not null]
  cartCustom CartItemCustomization [not null]
  orderCustom OrderItemCustomization [not null]
}

Table ProductBaseCustomizable {
  productId String [not null]
  product Product [not null]
  customizableId Int [not null]
  customizable Customizable [not null]
  isRemovable Boolean [not null, default: true]

  indexes {
    (productId, customizableId) [pk]
  }
}

Table ProductAvailableCustomizable {
  productId String [not null]
  product Product [not null]
  customizableId Int [not null]
  customizable Customizable [not null]

  indexes {
    (productId, customizableId) [pk]
  }
}

Table CartItem {
  id String [pk]
  user User [not null]
  userId String [not null]
  product Product [not null]
  productId String [not null]
  variant ProductVariant
  variantId String
  quantity Int [not null, default: 1]
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  customizations CartItemCustomization [not null]
}

Table CartItemCustomization {
  cartItemId String [not null]
  cartItem CartItem [not null]
  customizableId Int [not null]
  customizable Customizable [not null]
  action CustomizationAction [not null]

  indexes {
    (cartItemId, customizableId, action) [pk]
  }
}

Table Order {
  id String [pk]
  user User
  userId String
  isGuest Boolean [not null, default: false]
  customerName String [not null]
  customerPhone String [not null]
  deliveryType DeliveryType [not null, default: 'DELIVERY']
  address Address
  addressId String
  deliveryStreet String
  deliveryCity String
  deliveryPostalCode String
  deliveryInstructions String
  scheduledFor DateTime
  estimatedTime DateTime
  subtotal Decimal [not null]
  deliveryFee Decimal [not null]
  total Decimal [not null]
  status OrderStatus [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  items OrderItem [not null]
  payment Payment
}

Table OrderItem {
  id String [pk]
  order Order [not null]
  orderId String [not null]
  product Product [not null]
  productId String [not null]
  variant ProductVariant
  variantId String
  nameSnapshot String [not null]
  variantSnapshot String
  notesSnapshot String
  unitPrice Decimal [not null]
  quantity Int [not null]
  subtotal Decimal [not null]
  customizations OrderItemCustomization [not null]
}

Table OrderItemCustomization {
  orderItemId String [not null]
  orderItem OrderItem [not null]
  customizableId Int [not null]
  customizable Customizable [not null]
  action CustomizationAction [not null]
  nameSnapshot String [not null]
  priceSnapshot Decimal [not null]

  indexes {
    (orderItemId, customizableId, action) [pk]
  }
}

Table Payment {
  id String [pk]
  order Order [not null]
  orderId String [unique, not null]
  provider PaymentProvider [not null, default: 'STRIPE']
  sessionId String
  providerPaymentId String
  providerRefundId String
  amount Float [not null]
  currency String [not null, default: 'EUR']
  status PaymentStatus [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Settings {
  id String [pk, default: 'singleton']
  deliveryFee Decimal [not null, default: 0]
  minOrderAmount Decimal [not null, default: 0]
  avgPrepMinutes Int [not null, default: 30]
  autoAcceptOrders Boolean [not null, default: true]
  temporarilyClosed Boolean [not null, default: false]
  statusMessage String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table BusinessHours {
  id String [pk]
  dayOfWeek DayOfWeek [not null]
  openTime String [not null]
  closeTime String [not null]
  isClosed Boolean [not null, default: false]
  order Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (dayOfWeek, order) [unique]
  }
}

Table SpecialHours {
  id String [pk]
  date DateTime [unique, not null]
  reason String
  isClosed Boolean [not null, default: false]
  openTime String
  closeTime String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum UserRole {
  CUSTOMER
  ADMIN
  STAFF
}

Enum Category {
  PIZZA
  BURGER
  BEBIDA
  ENTRANTE
  POSTRE
  ENSALADA
}

Enum CustomizableCategory {
  QUESO
  CARNE
  VEGETAL
  SALSA
  EXTRA
}

Enum CustomizationAction {
  ADD
  REMOVE
}

Enum DeliveryType {
  DELIVERY
  PICKUP
}

Enum OrderStatus {
  PENDING
  PAID
  CONFIRMED
  READY
  ON_THE_WAY
  DELIVERED
  CANCELLED
}

Enum PaymentProvider {
  STRIPE
  CASH_ON_DELIVERY
  CARD_ON_DELIVERY
}

Enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED
  REFUNDED
}

Enum DayOfWeek {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

Ref: RefreshToken.userId > User.id [delete: Cascade]

Ref: Address.userId > User.id [delete: Cascade]

Ref: ProductVariant.productId > Product.id [delete: Cascade]

Ref: ProductBaseCustomizable.productId > Product.id [delete: Cascade]

Ref: ProductBaseCustomizable.customizableId > Customizable.id

Ref: ProductAvailableCustomizable.productId > Product.id [delete: Cascade]

Ref: ProductAvailableCustomizable.customizableId > Customizable.id

Ref: CartItem.userId > User.id [delete: Cascade]

Ref: CartItem.productId > Product.id [delete: Cascade]

Ref: CartItem.variantId > ProductVariant.id [delete: Set Null]

Ref: CartItemCustomization.cartItemId > CartItem.id [delete: Cascade]

Ref: CartItemCustomization.customizableId > Customizable.id

Ref: Order.userId > User.id [delete: Set Null]

Ref: Order.addressId > Address.id [delete: Set Null]

Ref: OrderItem.orderId > Order.id [delete: Cascade]

Ref: OrderItem.productId > Product.id

Ref: OrderItem.variantId > ProductVariant.id [delete: Set Null]

Ref: OrderItemCustomization.orderItemId > OrderItem.id [delete: Cascade]

Ref: OrderItemCustomization.customizableId > Customizable.id

Ref: Payment.orderId - Order.id [delete: Cascade]